[package]
name = "EThDexMev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "ws",
    "rustls",
    "abigen",
    "ipc",
] }
futures = "0.3.30"
thiserror = "1.0.37"
revm = { version = "3.0.0", features = ["ethersdb", "serde", "std"] }
eyre = "0.6.8"
ethers-core = "2.0.2"
hashbrown = "0.13.2"
